--- a/src/Components/WeatherApp/WeatherApp.css
+++ b/src/Components/WeatherApp/WeatherApp.css
@@ -132,6 +132,7 @@ input[type="text"] {
   background-color: rgba(255, 255, 255, 0.281);
   color: black;
   gap: 10px;
+  
 }
   
 
@@ -173,6 +174,8 @@ input[type="text"] {
   .weekly-forecast{
     display: flex;
     justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
   .forecast-card{
     width: 120px;
